infrastructure/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  namespace: lmagniez03-dev
  labels:
    app: postgresql
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: registry.redhat.io/rhel9/postgresql-15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-storage
              mountPath: /var/lib/pgsql/data
      volumes:
        - name: postgresql-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: lmagniez03-dev
  labels:
    app: postgresql
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
